# Cellular-Automaton

./: .gitignore  Cargo.toml  METRICS.md  README.md  article.md  output.txt
src/: cell.rs  genetics.rs  grid.rs  lib.rs  logging.rs  main.rs  metrics.rs  ml_layer.rs  nca.rs  presets.rs  rules.rs  stats.rs  ui.rs
